// Copyright 2022 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package ctrv2.api;

option go_package = "infra/cros/cmd/cros-tool-runner/api";

// Extensions to the LoginRegistry API. Extensions will be handled before login.
message LoginRegistryExtensions {
  // Provides a hook to execute `gcloud auth activate-service-account` before
  // login. The value are the arguments of the command documented in
  // http://cloud/sdk/gcloud/reference/auth/activate-service-account.
  // e.g. ["service_account@domain.com", "--key-file=/path/key.json"] or
  // ["--key-file", "/path/key.json"]
  repeated string gcloud_auth_service_account_args = 1;
}
